Tried to add swagger. Rework diary saving